service worker: Bump update time even when the script was identical

This regressed in https://chromium.googlesource.com/chromium/src/+/8b39b42e3b4efa9f684aedb981b7a776222849d1 [formerly 57ebec5b7cce00100000763371c56bc4991b56dd]

Also make the unit test more thorough and realistic:
* It was using StopWorker() when the script was identical, but after the change above
production doesn't take that path
* don't use force_bypass_cache_for_scripts since in production that's only used
by DevTools

BUG=605382

Review URL: https://codereview.chromium.org/1903043005

Cr-Commit-Position: refs/heads/master@{#389025}

Former-commit-id: 82b3853597f585e25ba051cb6b1ac9063430883f