content/browser/service_worker/embedded_worker_instance.cc
@@ -590,8 +590,9 @@ void EmbeddedWorkerInstance::OnScriptLoaded() {
         duration, source, inflight_start_task_->start_situation());
   }
 
-  FOR_EACH_OBSERVER(Listener, listener_list_, OnScriptLoaded());
   starting_phase_ = SCRIPT_LOADED;
+  FOR_EACH_OBSERVER(Listener, listener_list_, OnScriptLoaded());
+  // |this| may be destroyed by the callback.
 }
 
 void EmbeddedWorkerInstance::OnURLJobCreatedForMainScript() {
